@@ -384,9 +384,9 @@ int CPSPRadio::ProcessEvents()
 					m_UI->OnNewSongData(m_Sound->GetCurrentStream()->GetMetaData());
 				break;
 			
-			case MID_TIME_UPDATED:
+			case MID_STREAM_TIME_UPDATED:
 				if (m_UI)
-					m_UI->OnTimeUpdate(m_Sound->GetCurrentStream()->GetMetaData());
+					m_UI->OnStreamTimeUpdate(m_Sound->GetCurrentStream()->GetMetaData());
 				break;
 
 			case MID_TCP_CONNECTING_PROGRESS:
