@@ -51,7 +51,7 @@
 	#define MID_DECODE_STREAM_OPEN_ERROR	0x00000070
 	#define MID_DECODE_STREAM_OPEN			0x00000080
 	#define MID_NEW_METADATA_AVAILABLE		0x000000A0
-	#define MID_TIME_UPDATED				0x000000A1
+	#define MID_STREAM_TIME_UPDATED			0x000000A1
 	#define MID_THDECODE_DECODING_DONE		0x000000B1
 	#define MID_BUFF_PERCENT_UPDATE			0x00000090
 	#define MID_TCP_CONNECTING_PROGRESS		0x000000C0
