@@ -9,6 +9,7 @@ NEW FEATURES
 (raf) TextUI: Now clock format is still compatible and configurable as in 0.37-Final. New mode added (0). If set to that in the config file, then the format is retrieved from the system configuration. (r752)
 (raf) Core: Now MP3 report the current elapsed time (r755)
 (raf) TextUI: Added support to display current (implemented) and total (not implemented) time of the playing stream. (r755)
+(raf) Core: Now total time is also calculated for MP3s (VBR MP3 will probably show wrong data). (r756)
 BUG FIXES
 (sandberg) Core/3DUI: Rearranged the order of the VBlank operations to remove some of the jitter on the UI. (r745)
 (sandberg) Core: [ Bug #6256 ] WiFi logging is always enabled (r754)
